[package]
name = "infrapass"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3.31"
tracing = {version = "0.1.37", features = ["log", "std", "attributes"] }
tracing-appender = "0.2.2"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { version = "0.3.17", features = ["fmt", "env-filter"] }
sui_sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk"}
sui-keys = { git = "https://github.com/MystenLabs/sui", package = "sui-keys" }
sui-types = { git = "https://github.com/MystenLabs/sui", package = "sui-types" }
sui-config = { git = "https://github.com/MystenLabs/sui", package = "sui-config" }
sui_json_rpc_types = { git = "https://github.com/MystenLabs/sui", package = "sui-json-rpc-types" }
sui_transaction_builder = { git = "https://github.com/MystenLabs/sui", package = "sui-transaction-builder" }
shared-crypto = { git = "https://github.com/MystenLabs/sui", package = "shared-crypto" }
tokio = { version = "1.2", features = ["full"] }
anyhow = "1.0"
serde = "1.0.118"
serde_json = "1.0.61"

[lib]
name = "infrapass"
path = "src/lib.rs"

[[bin]]
name = "infrapass-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "infrapass-server"
path = "src/bin/server.rs"